--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -26,7 +26,7 @@ jobs:
       - name: push pacman-contribution-graph.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          target_branch: output
+          target_branch: output_pacman
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
